Added /questions/{step} endpoint, fixed question transformer, updated swagger
